packages/sfpm-ui/objects/Sfpm_Artifact_History__c/Sfpm_Artifact_History__c.object-meta.xml
<CustomObject>
    <description
  >Represents a snapshotted sfpm artifact installed in the org.</description>
    <nameField>
        <label>Sfpm Artifact History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sfpm Artifact Histories</pluralLabel>
    <label>Sfpm Artifact History</label>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>