packages/sfpm-ui/objects/Sfpm_Artifact_History__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <description>Checksum hash of artifact source content</description>
    <label>Checksum</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>