packages/sfpm-ui/objects/Sfpm_Artifact_History__c/fields/Commit_Id__c.field-meta.xml
<CustomField>
    <fullName>Commit_Id__c</fullName>
    <description>Git commit id</description>
    <label>Commit Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>