packages/sfpm-ui/objects/Sfpm_Artifact_History__c/fields/Deploy_Id__c.field-meta.xml
<CustomField>
    <fullName>Deploy_Id__c</fullName>
    <description>Deployment identifier</description>
    <label>Deploy Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>