packages/sfpm-ui/objects/Sfpm_Artifact_History__c/fields/Pipeline_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Run_Id__c</fullName>
    <description>Pipeline run identifier</description>
    <label>Pipeline Run Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>