packages/sfpm-ui/objects/Sfpm_Artifact_History__c/fields/Tag__c.field-meta.xml
<CustomField>
    <fullName>Tag__c</fullName>
    <description>JSON array of tags</description>
    <label>Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>