packages/sfpm-ui/objects/Sfpm_Artifact_History__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description
  >Artifact version. Mirrors packageVersionId for unlocked packages.</description>
    <label>Version</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>